name:                rfxcom
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/dnulnets/RFX2MQTT#readme
license:             BSD3
license-file:        LICENSE
author:              Tomas Stenlund
maintainer:          tomas.stenlund@telia.com
copyright:           (c) 2016 Tomas Stenlund
category:            Application,Utility
build-type:          Simple
cabal-version:       >=1.10

executable RFX2MQTT
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       serialport,
                       bytestring,
                       pipes,
                       text,
                       pipes-bytestring,
                       pipes-safe,
                       pipes-binary,
                       pipes-parse,
                       binary

