name:                rfxcom
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://bitbucket.org/dnulnets/rfxcom
license:             BSD3
license-file:        LICENSE
author:              Tomas Stenlund
maintainer:          tomas.stenlund@telia.com
copyright:           (c) 2016 Tomas Stenlund
category:            Application,Utility
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5,
                       serialport,
                       bytestring,
                       pipes,
                       text,
                       pipes-bytestring,
                       pipes-safe,
                       pipes-binary,
                       pipes-parse,
                       binary                 
  exposed-modules:     RFXCom.Message.Base,
                       RFXCom.Message.BaseMessage,
                       RFXCom.Message.TemperatureAndHumidity,
                       RFXCom.Message.Security1,
                       RFXCom.Message.Decoder

executable rfxcom
  hs-source-dirs:      src
  other-modules:       RFXCom.Message.Base,
                       RFXCom.Message.BaseMessage,
                       RFXCom.Message.TemperatureAndHumidity,
                       RFXCom.Message.Security1,
                       RFXCom.Message.Decoder
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       serialport,
                       bytestring,
                       pipes,
                       text,
                       pipes-bytestring,
                       pipes-safe,
                       pipes-binary,
                       pipes-parse,
                       binary

